--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pokemons",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://jparasha.github.io/pokemon-app/",
   "dependencies": {
     "axios": "0.27.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,10 +12,13 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
