--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pokemons",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://jparasha.github.io/pokemon-app/",
   "dependencies": {
     "axios": "0.27.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,7 +17,7 @@
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b main -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
